--- a/Normalizing_flow_tutorial.ipynb
+++ b/Normalizing_flow_tutorial.ipynb
@@ -29,7 +29,7 @@
         "lOH2vON7D8dk",
         "HXLZahBNhE9V"
       ],
-      "authorship_tag": "ABX9TyOmUUxBg+dyDdNvAW5BdVsB",
+      "authorship_tag": "ABX9TyMcMsro1z+nodHrR4gfhwT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,14 +67,14 @@
         "*   Should know what is a probality distribution\n",
         "*   Some basics of pytorch/tf/ keras\n",
         "*   Generating random numbers in python\n",
-        "*   Should be able to unmute and attempt to answer/ask some questions   😄\n",
+        "*   Should be able to unmute and attempt to answer/ask some questions 😄  \n",
         "\n",
         "**disclaimer:**\n",
         "> Please be aware of bold and non-bold font for the vector/scalar.\n",
         "\n",
         "> Spelling mistakes.\n",
         "\n",
-        "> Questions to audience is indicated by 🤔\n",
+        "> Questions to audience is indicated by 🤔.  (audience will be picked at random using rand function)** 😄 \n",
         "\n",
         "**Why should i understand it?**\n",
         "\n",
